# Triton-distributed

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README-cn.md  README.md  code-format.sh  launch.sh  launch_amd.sh  sync-history.md
.github/workflows/: ci.yml  integration-tests-amd.yml  pre-commit.yml  runner-preparation.yml
csrc/: CMakeLists.txt
csrc/lib/: CMakeLists.txt  apis.cuh  moe_utils.cu  op_pybind.cc  registry.cc  registry.h
dialect/: triton_distributed.cc
dialect/include/Dialect/Distributed/IR/: Dialect.h  DistributedDialect.td
docs/: README.md  amd-perf.md  autotuner-cn.md  autotuner.md  build.md  conf.py  index.rst  prepare_nvshmem.md  primitives.md  requirements-docs.txt
docs/distributed/: amd-perf.md  build.md  primitives.md
docs/getting-started/: installation.rst
docs/getting-started/tutorials/: index.rst
docs/python-api/: triton-dist.language.rst  triton-dist.semantics.rst
include/triton/Tools/Sys/: GetEnv.hpp
lib/Analysis/: AxisInfo.cpp
lib/Conversion/TritonToTritonGPU/: CMakeLists.txt  TritonGPUConversion.cpp  TritonToTritonGPUPass.cpp
lib/Dialect/TritonGPU/Transforms/Pipeliner/: PipeliningUtility.cpp
patches/triton/cmake/: AddTritonUnitTest.cmake
patches/triton/include/triton/Tools/Sys/: GetEnv.hpp
patches/triton/lib/Analysis/: AxisInfo.cpp
patches/triton/lib/Conversion/TritonToTritonGPU/: TritonGPUConversion.cpp  TritonToTritonGPUPass.cpp
patches/triton/lib/Dialect/TritonGPU/Transforms/: CMakeLists.txt
patches/triton/lib/Dialect/TritonGPU/Transforms/Pipeliner/: PipeliningUtility.cpp
patches/triton/python/src/: ir.cc
patches/triton/python/triton/compiler/: compiler.py
patches/triton/python/triton/language/extra/: libshmem_device.py
python/: build_helpers.py  setup.py  triton
python/src/: ir.cc
python/triton/compiler/: compiler.py
python/triton/language/: core.py
python/triton/language/extra/: libshmem_device.py
python/triton/runtime/: build.py
python/triton_dist/: CMakeLists.txt  __init__.py  autotuner.py  language.py  utils.py
python/triton_dist/kernels/amd/: __init__.py  all_gather_gemm.py  common_ops.py  gemm_reduce_scatter.py
python/triton_dist/kernels/nvidia/: __init__.py  allgather.py  allgather_gemm.py  allgather_group_gemm.py  comm_perf_model.py  common_ops.py  ep_a2a.py  flash_decode.py  gemm_perf_model.py  gemm_reduce_scatter.py  gemm_rs_threadblock_swizzle.py  low_latency_all_to_all.py  low_latency_allgather.py  moe_reduce_rs.py  reduce_scatter.py
python/triton_dist/layers/nvidia/: __init__.py  ep_a2a_layer.py  low_latency_allgather_layer.py  sp_flash_decode_layer.py
python/triton_dist/test/amd/: test_ag_gemm_intra_node.py  test_barrier_all.py  test_extern_functions.py  test_gemm_rs_intra_node.py  test_hip_lds.py  test_matmul_amd.py  test_wait_and_notify.py
python/triton_dist/test/nvidia/: test_ag_gemm.py  test_ag_gemm_inter_node.py  test_ag_gemm_intra_node.py  test_ag_moe.py  test_ag_moe_inter_node.py  test_ag_small_msg.py  test_all_gather.py  test_all_to_all.py  test_common_ops.py  test_decode_attn.py  test_distributed_wait.py  test_ep_a2a.py  test_ep_moe_inference.py  test_fast_allgather.py  test_gemm_rs.py  test_gemm_rs_multi_node.py  test_language_extra.py  test_moe_reduce_rs.py  test_notify.py  test_nvshmem_api.py  test_reduce_scatter.py  test_ring_put.py  test_sp_decode_attn.py
python/triton_dist/tools/: __init__.py  compile_aot.py
python/triton_dist/tools/compile/: __init__.py  compile.c  compile.py
python/triton_dist/tools/runtime/: triton_aot_runtime.cc
scripts/: aot_kernels.txt  build_triton.sh  check_license.py  diff_to_conflict.py  gen_aot_code.sh  launch.sh  pull_upstream_triton.sh  setenv.sh
shmem/nvshmem_bind/: .gitignore  build.sh  build_nvshmem.sh
shmem/nvshmem_bind/nvshmemi/: .gitignore  build_nvshmemi_bc.sh  transfer_device.cu
shmem/nvshmem_bind/pynvshmem/: CMakeLists.txt  setup.py
shmem/nvshmem_bind/pynvshmem/example/: run_ring_put.py
shmem/nvshmem_bind/pynvshmem/python/_pynvshmem/: __init__.pyi
shmem/nvshmem_bind/pynvshmem/python/pynvshmem/: __init__.py
shmem/nvshmem_bind/pynvshmem/src/: pynvshmem.cc
shmem/nvshmem_bind/runtime/: .gitignore  nvshmem_wrapper.cu
shmem/rocshmem_bind/: build.sh  build_rocshmem.sh
shmem/rocshmem_bind/pyrocshmem/: setup.py
shmem/rocshmem_bind/pyrocshmem/example/: naive.py  run.sh
shmem/rocshmem_bind/pyrocshmem/src/: pyrocshmem.cc
shmem/rocshmem_bind/python/: run.sh
shmem/rocshmem_bind/python/example/: test_torch_rocm_distributed.py
shmem/rocshmem_bind/python/triton_rocshmem/: __init__.py
shmem/rocshmem_bind/scripts/: build_rshm_ipc_single.sh
tutorials/: 01-distributed-notify-wait.py  02-intra-node-allgather.py  03-inter-node-allgather.py  04-deepseek-infer-all2all.py  05-intra-node-reduce-scatter.py  06-inter-node-reduce-scatter.py  07-overlapping-allgather-gemm.py  08-overlapping-gemm-reduce-scatter.py  09-AMD-overlapping-allgather-gemm.py  10-AMD-overlapping-gemm-reduce-scatter.py  README.md
unittest/: lower_wait.mlir
unittest/Dialect/: CMakeLists.txt
utils/: merge_trace.py
